@@ -2,7 +2,7 @@ Package: scGate
 Type: Package
 Title: Marker-Based Cell Type Purification for Single-Cell Sequencing
         Data
-Version: 1.6.0
+Version: 1.6.2
 Authors@R: c(
   person('Massimo', 'Andreatta',
     email = 'massimo.andreatta@unil.ch',
@@ -12,8 +12,8 @@ Authors@R: c(
     email = 'arieljberenstein@gmail.com',
     role = c('aut'),
     comment = c(ORCID = '0000-0001-8540-5389')), 
-  person('Changsheng','Li',
-    email = 'changsheng.li@alum.esci.upf.edu',
+  person('Josep','Garnica',
+    email = 'josep.garnicacaparros@unil.ch',
     role = c('aut')),  
   person('Santiago', 'Carmona',
     email = 'santiago.carmona@unil.ch',
@@ -34,11 +34,11 @@ Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.2.3
 NeedsCompilation: no
-Packaged: 2023-11-06 11:55:11 UTC; mass
+Packaged: 2024-04-23 08:21:05 UTC; mass
 Author: Massimo Andreatta [aut, cre] (<https://orcid.org/0000-0002-8036-2647>),
   Ariel Berenstein [aut] (<https://orcid.org/0000-0001-8540-5389>),
-  Changsheng Li [aut],
+  Josep Garnica [aut],
   Santiago Carmona [aut] (<https://orcid.org/0000-0002-2495-0671>)
 Maintainer: Massimo Andreatta <massimo.andreatta@unil.ch>
 Repository: CRAN
-Date/Publication: 2023-11-06 12:30:02 UTC
+Date/Publication: 2024-04-23 08:50:02 UTC
