@@ -1,15 +1,15 @@
-b54fb6b9790cf27994d7d541d04f259e *DESCRIPTION
-c59f567bf35db1a979b2a39495f1bc08 *NAMESPACE
-4405019aa056651b2ccd5d80f6d7d02e *R/main.R
-6c1fd995963bb764f29b8c9fa4cdb8f2 *R/utils.R
-bb1cb45ec0cebba54c62dd097b299699 *build/vignette.rds
+57f5be08fdd627591c7bcdbfa0bf5785 *DESCRIPTION
+32d5ad4f6993ef24697aa95c847ac304 *NAMESPACE
+e1dad5d578f95e5560ea8012986d72fa *R/main.R
+5384d1d09d616d58ee5aefd1097793bd *R/utils.R
+d9fd8dd150d03f3ab65d79080629db61 *build/vignette.rds
 0e09fe39b7fb5d92f4d0549e2e5d96b5 *data/genes.blacklist.default.RData
 4f61eb61534e4aa17cdf6840e65a5a6b *data/query.seurat.rda
 850a6fc0af8248addfb5206f9bcee44d *inst/CITATION
-89974b3d0327852198af03a9bd82c721 *inst/NEWS.Rd
+9c87bcbddd1ee4600dec4873a571a8af *inst/NEWS.Rd
 29c5a45a56864172dd0c6c737d397adf *inst/doc/make.index.Rmd
 5b6892f6d98827ce1d9e750bfa035e6a *inst/doc/make.index.html
-d5d5613c71d89159be93c72081f3c4ba *man/combine_scGate_multiclass.Rd
+414fc7cd30fd7362109583f38c0926ce *man/combine_scGate_multiclass.Rd
 1bdf308c0b65a6de0034c70da9f3de62 *man/gating_model.Rd
 ed8d2d55ffcd21715b3143a4c27fd37c *man/genes.blacklist.default.Rd
 325c8e0ae355605b263768186d0fb9a0 *man/get_scGateDB.Rd
@@ -20,6 +20,6 @@ a6b6b54a985b87c0b221e1ac74ba2ba6 *man/load_scGate_model.Rd
 4a1a7a3cb8186fdc6410445b18a9ea91 *man/plot_levels.Rd
 5bc1aadedc94e3b1e3f4f497a816f948 *man/plot_tree.Rd
 13676acf05efc7889b5720177c55c7e9 *man/query.seurat.Rd
-dcdbbbe34c03a88e2ec6b29c96d8ead1 *man/scGate.Rd
+e61d4e0d3a8230a399dea7aa040cec2d *man/scGate.Rd
 23ac174a03524b77d0ed7be22f492709 *man/test_my_model.Rd
 29c5a45a56864172dd0c6c737d397adf *vignettes/make.index.Rmd
