@@ -22,6 +22,7 @@ importFrom(UCell,SmoothKNN)
 importFrom(dplyr,"%>%")
 importFrom(dplyr,bind_rows)
 importFrom(dplyr,distinct)
+importFrom(dplyr,left_join)
 importFrom(ggridges,geom_density_ridges)
 importFrom(methods,is)
 importFrom(patchwork,wrap_plots)
